# dcaf

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  COPYING  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac
am/: Makefile.am  README  am.cc  am_abc.cc  am_example_configuration.json  am_example_configuration_cam.json  am_example_configuration_sam.json  am_util.cc  am_util.hh  coap_config.cc  coap_config.hh  config-nohost.yaml  config_parser.cc  config_parser.hh  db.cc  db.hh  dcaf_am_test_client.cc  rule.hh
build-env/: Dockerfile.dcaf  build.sh  imagename
config/: attribute_ruleset.json  ruleset.json
config/issuers/parkcheaper/: ipk_parkcheaper_2048.json
config/issuers/parkcheaper/credential_descriptions/: parkcheaper_member.json  parkcheaper_staff.json
config/issuers/parksmart/credential_descriptions/: parksmart_member.json  parksmart_staff.json
config/trusted_certificates/: cacert.pem
doc/: Doxyfile  Makefile.am
examples/: Makefile.am  dcaf-client.c  rs.c  s.c
include/dcaf/: ace.h  aif.h  anybor.h  cose.h  cose_int.h  cose_types.h  cwt.h  dcaf.h  dcaf_abc.h  dcaf_abc_json.h  dcaf_address.h  dcaf_am.h  dcaf_base64.h  dcaf_cbor.h  dcaf_coap.h  dcaf_crypto.h  dcaf_debug.h  dcaf_directory_traverser.h  dcaf_int.h  dcaf_key.h  dcaf_mem.h  dcaf_optlist.h  dcaf_prng.h  dcaf_rules.h  dcaf_rules_json.h  dcaf_transaction.h  dcaf_utf8.h  libdcaf.h.in  scope.h  state.h
src/: ace.c  aif.c  anybor.c  cose.c  dcaf.c  dcaf_abc.c  dcaf_abc_json.c  dcaf_address.c  dcaf_am.c  dcaf_base64.c  dcaf_cbor.c  dcaf_coap.c  dcaf_crypto_mbedtls.c  dcaf_crypto_openssl.c  dcaf_crypto_tinydtls.c  dcaf_debug.c  dcaf_directory_traverser.c  dcaf_key.c  dcaf_mem.c  dcaf_optlist.c  dcaf_prng.c  dcaf_rules.c  dcaf_rules_json.c  dcaf_transaction.c  dcaf_utf8.c
src/platform/posix/: dcaf_address.c
tests/: Makefile.am  ccm-testdata.c  test.hh  test_abc.cc  test_abc_message.cc  test_access_rules.cc  test_aif.cc  test_base64.cc  test_configuration.cc  test_cose.cc  test_cose.hh  test_crypto.cc  test_keys.cc  test_prng.cc  test_ticket.cc  testdriver.cc
tests/credentials/: parksmart_member_credential.json  parksmart_staff_credential.json
tests/testconfig/: attribute_ruleset.json  ruleset.json  ruleset_empty.json
tests/testconfig/issuers/parksmart/: ipk.json
tests/testconfig/issuers/parksmart/credential_descriptions/: description.json  description4.json
tests/testkeys/: credential.json  garagexy-cert.pem  garagexy-key.pem  ipk2.json  ipk_parksmart_4096.json
